--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,184 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  font-family: Arial, sans-serif;
+}
+
+.header{
+  background-image: url(/img/nav.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 50px;
+}
+.header-ul{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header-li{
+  margin: 10px;
+  color: rgb(0, 0, 0);
+  font-size: 25px;
+  -webkit-text-stroke-width: 0.5px;
+  
+}
+.footer {
+  background-image: url(/img/nav.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: rgb(0, 0, 0);
+  padding: 20px 0;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+
+.footer-span {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.social-links {
+  margin-top: 10px;
+}
+
+.social-icon {
+  color: rgb(0, 0, 0);
+  margin: 0 10px;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.social-icon:hover {
+  color: #1abc9c;
+}
+
+.social-icon i {
+  margin-right: 5px;
+}
+
+
+.box1{
+  background-image: url(/img/1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height:600px;
+  margin-bottom: 100px;
+}
+.box2{
+  margin: 100px 20px;
+  height: 100%;
+  width:30%;
+}
+.box2-h1{
+  margin:10px;
+  font-size: 60px;
+  line-height: 50px;
+  color: rgb(161, 102, 47);
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(0, 0, 0);
+  font-family: Arial, sans-serif;
+
+}
+.box2-p{
+  margin:10px;
+  font-size:16px;
+  color: rgb(0, 0, 0);
+}
+.box2-btn{
+  border: black 1px solid;
+  border-radius: 25px;
+  width: 50%;
+  background-color: rgb(161, 102, 47);
+  color: white;
+  text-transform: capitalize;
+  font-size: large;
+}
+.box3{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 11px;
+  background-color: white;
+  flex-wrap: wrap;
+  margin:100px 20px ;
+}
+.box3-div{
+  width: 250px;
+  height: 100%;
+  background-color:rgb(161, 102, 47) ;
+  margin: 10px;
+  border-radius: 25px;
+  justify-content: center;
+}
+.box3-img{
+  height:250px;
+  border-radius: 25px;
+}
+.heading{
+ justify-content:center;
+ width: 200px;
+ height: 50px;
+ background-color: rgb(255, 255, 255);
+ padding: 5px;
+ align-items: center;
+ color: rgb(161, 102, 47) ;
+ border: 2px dotted rgb(161, 102, 47);
+ border-radius: 25px;
+ text-transform: capitalize;
+ margin-bottom:50px;
+
+}
+.haeding-h1{
+  display: block;
+justify-content: center;
+font-size:20px;
+}
+.about-box{
+  display: block;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 50%;
+  height: 100%;
+  margin:100px 10px;
+  line-height: 40px;
+  border: 2px black dotted;
+  border-radius: 25px;
+  color: white;
+}
+.about-h1{
+   text-transform: capitalize;
+   font-size: 30px;
+   margin: 10px;
+}
+.about{
+  background-image: url(/img/about.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.input{
+  width: 50%;
+  border-radius: 25px;
+  margin: 5px;
+  color: black;
+  
+}
+.contact-box{
+  display: block;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 50%;
+  height: 100%;
+  margin:100px 10px;
+  line-height: 60px;
+  border: 2px black dotted;
+  border-radius: 25px;
+  color: rgb(255, 255, 255);
+  align-items: center;
+}
